# recogn-face

./: .gitignore  README.md  demo.py  main.py  requirements.txt
py_pro/: pyproject.toml  ven.txt
