[tool.poetry]
name = "py-pro"
version = "0.1.0"
description = ""
authors = ["carrickcheah <carrick113@gmail.com>"]
readme = "README.md"
packages = [{include = "py_pro", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
